<resources>
    <string name="app_name">Supermarkt Fetch</string>

    <string name="user_name">Username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="grocery_list">Grocery list</string>
    <string name="order_list">Your orders</string>
    <string name="home">Home</string>
    <string name="new_order">New order</string>
    <string name="get_started">Get started</string>
    <string name="total">Total</string>
    <string name="products">Products</string>
    <string name="product_worth">Products worth:</string>
    <string name="earnings">Earnings:</string>
    <string name="fetch_request">Fetch Request</string>
    <string name="euro">€ </string>
    <string name="by">By</string>
    <string name="zero">0</string>
    <string name="detailed_info">Detailed info</string>
    <string name="add_request">Add request</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="select_store">Select Store</string>
    <string name="add_product">Add product</string>
    <string name="usernameInPreferences">username</string>
    <string name="geofence">Geofence</string>
    <string name="eta">Estimated arrival time</string>
    <string name="at_supermarket">At supermarket</string>
    <string name="product_dropoff">Dropoff place</string>

</resources>
