<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_groceries"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/grocery_list" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/order_list" />

    </group>

    <item android:title="@string/get_started">
        <menu>
            <item
                android:id="@+id/nav_add_order"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/new_order" />
            <item
                android:id="@+id/nav_geofence"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/geofence" />
        </menu>
    </item>

</menu>
