<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fetch.supermarkt.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ListView
        android:id="@+id/list_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:divider="@android:drawable/screen_background_light_transparent" />

    <LinearLayout
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_top_margin"
        android:paddingBottom="@dimen/activity_top_margin"
        android:id="@+id/block_below"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/total"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total"
                android:textColor="@color/white"
                />
            <View
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_width="wrap_content"
                android:layout_below="@id/txt_total"
                android:background="@color/white"
                android:id="@+id/hr_bar"
                android:layout_height="3dp" />

            <TextView
                android:text="@string/product_worth"
                android:textColor="@color/white"
                android:layout_below="@id/hr_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_worth" />

            <TextView
                android:text="@string/earnings"
                android:textColor="@color/white"
                android:layout_below="@id/product_worth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/earnings" />

            <TextView
                android:text="@string/euro"
                android:textColor="@color/white"
                android:layout_below="@id/hr_bar"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/val_worth"
                android:textAlignment="textEnd" />

            <TextView
                android:text="@string/euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/val_earnings"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:layout_below="@id/val_worth"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/fetch_request"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fetch"
                android:backgroundTint="@android:color/white"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
